<resources>
    <string name="app_name">محاسبات عددی</string>
    <string name="root_finding">ریشه یابی</string>
    <string name="finding_polynomial_function">درون‌یابی</string>
    <string name="hint_function">تابع را وارد کنید .</string>
    <string name="hint_root_end">پایان بازه ریشه</string>
    <string name="hint_root_start">شروع بازه ریشه</string>
    <string name="hint_Error">خطا</string>
    <string name="hint_start_point">نقطه شروع</string>
    <string name="hint_derivative">مشتق تابع</string>
    <string name="evaluate_root">محاسبه ریشه</string>
    <string name="error_empty">این فیلد نمی‌تواند خالی باشد</string>
    <string name="error_evaluate">خطای محاسبه</string>
    <string name="close">بستن</string>
    <string name="formula">تابع</string>
    <string name="derivative">مشتق</string>
    <string name="start_point">نقطه شروع</string>
    <string name="error">خطا</string>
    <string name="root">ریشه</string>
    <string name="root_start">ابتدای بازه</string>
    <string name="root_end">انتهای بازه</string>
    <string name="eval">مقدار تابع</string>
    <string name="x">X</string>
    <string name="f_x">f(x)</string>
    <string name="add">اضافه کردن</string>
    <string name="evaluate">محاسبه</string>
    <string name="draw">رسم نمودار</string>
    <string name="error_draw">لطفا فرمول و ابتدا و انتهای بازه را به درستی مشخص کنید.</string>
    <string name="error_in">لطفا حداقل یک نقطه اضافه کنید.</string>
    <array name="root_choices" >
        <item>منصف</item>
        <item>نابجایی</item>
        <item>تکرار ساده</item>
        <item>نیوتن</item>
    </array>
</resources>
