<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/x"
                android:hint="@string/x"
                android:layout_weight="1"
                android:inputType="numberSigned"/>

            <EditText
                android:layout_width="0dp"
                android:id="@+id/fx"
                android:hint="@string/f_x"
                android:inputType="numberSigned"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/add"
                android:layout_width="0dp"
                android:text="@string/add"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/evaluate"
                android:layout_width="0dp"
                android:text="@string/evaluate"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>