<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:padding="8dp"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/root_choices"
            android:padding="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/formula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_function" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/draw_formula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/ic_equalizer_black_24dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_derivative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <EditText
                android:id="@+id/derivative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_derivative" />

            <ImageView
                android:id="@+id/draw_derivative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/ic_equalizer_black_24dp" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/root_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_root_start"
                android:digits="0123456789-."
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/root_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_root_end"
                android:digits="0123456789-."
                android:inputType="numberSigned" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Error"
                android:digits="0123456789."
                android:inputType="numberDecimal"
                android:text="0.001" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/start_point"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789-."
                android:hint="@string/hint_start_point"
                android:visibility="gone" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/evaluate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evaluate_root" />

    </LinearLayout>


</androidx.cardview.widget.CardView>